[project]
name = "sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.6.0",
    "fsspec>=2025.3.0",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lpips>=0.1.4",
    "matplotlib>=3.10.3",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pipx>=1.7.1",
    "pre-commit>=4.2.0",
    "scikit-image>=0.25.2",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.1",
]
# after running uv sync to update the dependencies, run:
# uv pip install --force-reinstall torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu128
